--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Docker App</title>
+    <title>My Docker App 1</title>
 </head>
 <body>
     <h1>Hello from Docker Container 🚀</h1>
     <h2>Welcome to Jenkins + AWS Deployment</h2>
 </body>
 </html>
+
